tests/diagnostics/declarations/methods/self_type_annotation/expect.txt
# exit: 1
input/main.lang0:3:26: error: method receiver 'self' must not have a type annotation
      function idValue(self: User) -> int64 {
                           ^
